Fixed Course List page layout issue (updated courses.scss) #202

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -20049,8 +20049,9 @@ figcaption {
   }
 }
 
-.course-item .thumbnail ~ .header, .course-item .thumbnail ~ .body {
-  margin-left: 70.75rem;
+.course-item .thumbnail ~ .header,
+.course-item .thumbnail ~ .body {
+  margin-left: 5.125rem;
 }
 
 .course-item .datetime {
